# JViconDataStream2

./: .gitignore  .gitmodules  DEVELOPER_INFO.md  README.md  TestSwig.cpp  TestSwig.h  ViconDataStreamClientSDK.i  ViconDataStreamClientSDK.vcxproj  ViconDataStreamClientSDK.vcxproj.filters  __hard_clear.sh  _bash_config.sh  _git_pull_remote_super_repo_with current_submodules.sh  _project_config.sh  clear.sh  clear_hard.sh  clear_local_all.sh  clear_with_modules.sh  hard_clear.sh
Boost/: clear_local_all.sh  download-boost_local_Linux64.sh  ensure_dependency-recursive_Linux64.sh  generate-usable-boost-dir_local_Linux64.sh  regenerate-soft_local_Linux64.sh  regenerate_dependency-recursive_Linux64.sh  regenerate_local_Linux64.sh  setup-boost_local_Linux64.sh
CrossWindows/: _project_config.sh  clear_local_all.sh
CrossWindows/DataStreamSDK_1.10/: IDataStreamClientBase.h
CrossWindows/Wrapper/: ensure_dependency-recursive_Windows64.sh  generate-so_local_Windows64.sh  generate-wrapper_local_Windows64.sh  regenerate_dependency-recursive_Windows64.sh  regenerate_local_Windows64.sh  xxTest.sh
JViconDataStream/: .gitignore  README.md  _ensure-natives_dependency-recursive_Linux64.sh  _ensure-natives_dependency-recursive_Multiarch.sh  _project_config.sh  _regenerate-natives_dependency-recursive_Linux64.sh  _regenerate-natives_dependency-recursive_Multiarch.sh  _regenerate-natives_local_Linux64.sh  _regenerate-natives_local_Multiarch.sh  clear.sh  clear_local_all.sh  copy-deps_Multiarch.sh  ensure-natives_dependency-recursive_Linux64.sh  ensure_natives.sh  nbactions-debugJar.xml  pom.xml  recreate_natives.sh  regenerate-natives_dependency-recursive_Linux64.sh  regenerate-natives_local_Linux64.sh
JViconDataStream/_dependencies/: Wrapper
JViconDataStream/src/main/java/com/jogamp/common/jvm/: JNILibLoaderBase.java
JViconDataStreamParent/: pom.xml
JViconDataStreamTest/: README.md  pom.xml
Linux64/: .gitignore  README.md  Read  ViconDataStreamClientSDK.i  clear.sh  generate.sh  wrapper_so_generator.sh
Linux64/DataStreamSDK_1.10/: .directory  ViconStringTest.h
Linux64/ViconDataStreamSDK_1.10.0.123216h/: IDataStreamClientBase.h
NativeLibLoader/: README.md  pom.xml
NativeLibLoader/NativeGenerator_Linux64/: generate.sh
NativeLibLoader/NativeGenerator_Linux64/include/native/: com_jogamp_common_nio_PointerBuffer.h  com_jogamp_common_os_Platform.h  com_jogamp_common_util_JarUtil.h  jogamp_common_jvm_JVMUtil.h  jogamp_common_os_MachineDataInfoRuntime.h
NativeLibLoader/NativeGenerator_Linux64/include/native/Unix/: jogamp_common_os_UnixDynamicLinkerImpl.h
NativeLibLoader/NativeGenerator_Linux64/include/native/Windows/: jogamp_common_os_WindowsDynamicLinkerImpl.h
NativeLibLoader/NativeGenerator_Linux64/src/common/: JVMUtil.c  JarUtil.c  MachineDataInfoRuntime.c  Platforms.c  PointerBuffer.c
NativeLibLoader/NativeGenerator_Linux64/src/unix/: UnixDynamicLinkerImpl_JNI.c
NativeLibLoader/NativeGenerator_Linux64/src/windows/: WindowsDynamicLinkerImpl_JNI.c
ViconDataStreamClientSDK64/: ViconDataStreamClientSDK.cpp  ViconDataStreamClientSDK.i  ViconDataStreamClientSDK.sln  ViconDataStreamClientSDK.vcxproj  ViconDataStreamClientSDK_wrap.cpp  ViconDataStreamClientSDK_wrap.h
ViconDataStreamClientSDK64/ViconDataStreamClientSDK/: DataStreamRetimingClient.h  Neues Textdokument.txt  Notizen.txt  ViconDataStreamClientSDK.i  ViconDataStreamClientSDK.vcxproj  ViconDataStreamClientSDK.vcxproj.filters
ViconDataStreamClientSDK64/ViconDataStreamClientSDK/swig/: readme.info  readme.txt
ViconDataStreamClientSDK64/Vicon_DataStream SDK_Win64_CPP_1.8/: DataStreamClient.h
ViconDataStreamJavaWrapper/ViconDataStreamClientSDK64/ViconDataStreamClientSDK/: IDataStreamClientBase.h  ViconDataStreamClientSDK.i  ViconDataStreamSDK_CPP.lib  stdafx.cpp
ViconDataStreamJavaWrapper/ViconDataStreamClientSDK64/ViconDataStreamClientSDK/swig/: code.txt
ViconDataStreamSDK/: .gitignore  ViconStringTest.cpp  ViconStringTest.h  clear.sh  clear_local_all.sh  current_Linux64_source  current_build  ensure_Linux64.sh  ensure_dependency-recursive_Linux64.sh  ensure_local_Linux64.sh  generate.sh  regenerate_Linux64.sh  regenerate_dependency-recursive_Linux64.sh  regenerate_local_Linux64.sh
ViconDataStreamSDK/CmakeBuild/: CMakeLists.txt  generate_boost_dir.sh  regenerate_local_Linux64.sh
Vicon_DataStream SDK_Win64_CPP_1.10/: IDataStreamClientBase.h
Vicon_DataStream SDK_Win64_CPP_1.9/: DataStreamRetimingClient.h  IDataStreamClientBase.h  ViconDataStreamSDK_CPPTest.cpp
Vicon_DataStreamSDK_Win64_CPP_1.10/: DataStreamClient.h  ViconDataStreamSDK_CPPTest.cpp
Vicon_DataStream_SDK_Win64_CPP_1.9/: DataStreamClient.h
Windows64/: README.md
Windows64/wrapper_dll_generator/: SwigTest.h  cpp_windows64.sln  cpp_windows64.vcxproj  cpp_windows64.vcxproj.filters
Wrapcode/: README.md  ViconDataStreamClientSDK_wrap.cpp
Wrapper/: PlatformIndependent.i  ViconString.i  __hard_clear.sh  _bash_config.sh  _ensure_dependency-recursive_Multiarch.sh  _platform_config.sh  _project_config.sh  _regenerate_dependency-recursive_Multiarch.sh  _regenerate_local_Multiarch.sh  copy-deps_Multiarch.sh  copy-mingW-deps_Windows64.sh  ensure_dependency-recursive_Linux64.sh  ensure_local_Linux64.sh  generate-dynlib_Linux64.sh  generate-dynlib_Windows64.sh  generate-so_Linux64.sh  generate-so_local_Linux64.sh  generate-wrapper_Linux64.sh  generate-wrapper_Multiarch.sh  generate-wrapper_local_Linux64.sh  regenerate_dependency-recursive_Linux64.sh  regenerate_local_Linux64.sh
Wrapper/_dependencies/: ViconDataStreamNative
_legacy/Windows64/: README.md
_legacy/Windows64/wrapper_dll_generator/: SwigTest.cpp  SwigTest.h  cpp_windows64.sln  cpp_windows64.vcxproj  cpp_windows64.vcxproj.filters
cpp_windows64/: SwigTest.cpp  cpp_windows64.vcxproj  cpp_windows64.vcxproj.filters
swig/: Linux.patch  PlatformIndependent.i  ViconDataStreamClientSDK.i  ViconDataStreamSDK.i  ViconString.i  Windows.patch  clear.bat  clear.sh  generate.bat  generate.sh  generate_so.sh  generate_wrapper.sh  invoke.bat  invoke.sh
(+213 files in other folders)
